--- a/Styles/style7.css
+++ b/Styles/style7.css
@@ -23,15 +23,16 @@ nav a{
 nav ul li{
     list-style: none;
     display: inline-block;
-    padding: 13px 35px;
+    padding: 13px 105px;
  
     font-size: 18px;
     
 }
-.casa{
+.logoup{
     display:inline-block;
     vertical-align: middle;
     align-content: flex-end;
+    width: 25px;
 }
 .logo{
     display:inline-block;
@@ -81,7 +82,6 @@ a{
 }
 /**/
 /**//**/
-
 li{
     list-style: none;
 }
@@ -98,4 +98,3 @@ summary{
 .lado_lado{
     display: flex;
 }
-
