--- a/Styles/style4.css
+++ b/Styles/style4.css
@@ -23,15 +23,16 @@ nav a{
 nav ul li{
     list-style: none;
     display: inline-block;
-    padding: 13px 35px;
+    padding: 13px 105px;
  
     font-size: 18px;
     
 }
-.casa{
+.logoup{
     display:inline-block;
     vertical-align: middle;
     align-content: flex-end;
+    width: 25px;
 }
 .logo{
     display:inline-block;
@@ -51,7 +52,7 @@ footer{
     align-items: center;
     font-size: 18px;
     padding: 10px;
-    margin-top:455px;
+    margin-top:528px;
     width:99%;
     height: 70px;
 }
